--- a/gapp_works_2.html
+++ b/gapp_works_2.html
@@ -74,7 +74,7 @@
 <body class="body_page gapp_works_2_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">投資交易APP&nbsp;視覺稿</div>
+            <div class="h4 font_bold">投資交易APP&nbsp;設計稿</div>
             <a href="uiux_index.html#p10_title">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
@@ -96,11 +96,11 @@
                                     <div class="part_title h5 font_bold emphasize_text">前言</div>
                                     <div class="pup_text large_text">
                                         此專案頁面繁多整理不易，避免線框稿的標註說明，洩漏業務邏輯和開發細節，<br />
-                                        <span class="emphasize_text">僅以內容第一層級至第二層級頁面視覺稿(理想狀態)，展示視覺、介面設計能力。</span>
+                                        <span class="emphasize_text">僅以內容第一層級至第二層級頁面設計稿(理想狀態)，展示視覺、介面設計能力。</span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="part_title h5 font_bold emphasize_text">IOS視覺稿</div>
+                            <div class="part_title h5 font_bold emphasize_text">IOS設計稿</div>
                             <div class="pup_text large_text" style="font-size:16px;">以螢幕解析度寬390px為例<br /><span class="pup_normal_text_small">*合作的IOS工程師指定開發尺寸。</span></div>
 
                             <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
@@ -344,7 +344,7 @@
                                 </div>
                             </div>
                             <div class="pup_window_content_end_tip_container">
-                                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">IOS視覺稿</span></span>
+                                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">IOS設計稿</span></span>
                             </div>
                         </div>
                     </div>
@@ -352,7 +352,7 @@
                 <div id="gapp_tab_4" class="pup_window_tab_content">
                     <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                         <div class="pup_content">
-                            <div class="part_title h5 font_bold emphasize_text">Android視覺稿</div>
+                            <div class="part_title h5 font_bold emphasize_text">Android設計稿</div>
                             <div class="pup_text large_text" style="font-size:16px;">以螢幕解析度寬360px為例<br /><span class="pup_normal_text_small">*合作的Android工程師指定開發尺寸。</span></div>
 
                             <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
@@ -603,7 +603,7 @@
                                 </div>
                             </div>
                             <div class="pup_window_content_end_tip_container">
-                                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">Android視覺稿</span></span>
+                                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">Android設計稿</span></span>
                             </div>
                         </div>
                     </div>
