--- a/sino_works_2.html
+++ b/sino_works_2.html
@@ -74,7 +74,7 @@
 <body class="body_page sino_works_2_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">網路投保網站&nbsp;視覺稿</div>
+            <div class="h4 font_bold">網路投保網站&nbsp;設計稿</div>
             <a href="uiux_index.html#p7_title" id="sino_w2_back">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
@@ -253,7 +253,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="pup_window_content_next_tip pup_tab_btn sino_pup_tab_btn_5">接續瀏覽<a href="#sino_tab_5" id="sino_w2_tab1to2">桌機視覺稿</a></div>
+                <div class="pup_window_content_next_tip pup_tab_btn sino_pup_tab_btn_5">接續瀏覽<a href="#sino_tab_5" id="sino_w2_tab1to2">桌機設計稿</a></div>
                 <script>
                     $(document).ready(function() {
                         $(".sino_pup_tab_btn_5").click(function() {
@@ -264,17 +264,17 @@
 
                 </script>
                 <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">視覺稿&nbsp;規劃流程</span></span>
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">設計稿&nbsp;規劃流程</span></span>
                 </div>
             </div>
 
             <div id="sino_tab_5" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">桌機視覺稿-投保流程</div>
+                        <div class="part_title h5 font_bold emphasize_text">桌機設計稿-投保流程</div>
                         <div class="pup_text large_text" style="font-size:16px;">以螢幕解析度寬1440px為例。</div>
                         <div class="pup_normal_text">
-                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn" id="sino_w2_tab2tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整視覺稿</a>
+                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn" id="sino_w2_tab2tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整設計稿</a>
                         </div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
@@ -347,18 +347,18 @@
                     </div>
                 </div>
                 <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">桌機視覺稿</span></span>
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">桌機設計稿</span></span>
                 </div>
-                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" id="sino_w2_tab2tofigma-2">瀏覽完整視覺稿</a></div>
+                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" id="sino_w2_tab2tofigma-2">瀏覽完整設計稿</a></div>
             </div>
 
             <div id="sino_tab_6" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">平板視覺稿-投保流程</div>
+                        <div class="part_title h5 font_bold emphasize_text">平板設計稿-投保流程</div>
                         <div class="pup_text large_text" style="font-size:16px;">以螢幕解析度寬768px為例。</div>
                         <div class="pup_normal_text">
-                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn" id="sino_w2_tab3tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整視覺稿</a>
+                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn" id="sino_w2_tab3tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整設計稿</a>
                         </div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
@@ -431,18 +431,18 @@
                     </div>
                 </div>
                 <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">平板視覺稿</span></span>
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">平板設計稿</span></span>
                 </div>
-                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" id="sino_w2_tab3tofigma-2">瀏覽完整視覺稿</a></div>
+                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" id="sino_w2_tab3tofigma-2">瀏覽完整設計稿</a></div>
             </div>
 
             <div id="sino_tab_7" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">手機視覺稿-投保流程</div>
+                        <div class="part_title h5 font_bold emphasize_text">手機設計稿-投保流程</div>
                         <div class="pup_text large_text" style="font-size:16px;">以螢幕解析度寬430px為例。</div>
                         <div class="pup_normal_text">
-                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn" id="sino_w2_tab4tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整視覺稿</a>
+                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn" id="sino_w2_tab4tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整設計稿</a>
                         </div>
                         <div class="pup_content_pic_container" style="padding-top:25px">
                             <div class="pup_content_pic_item_mobile">
@@ -515,9 +515,9 @@
                     </div>
                 </div>
                 <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">手機視覺稿</span></span>
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">手機設計稿</span></span>
                 </div>
-                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" id="sino_w2_tab4tofigma-2">瀏覽完整視覺稿</a></div>
+                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1140-3102&t=Wuz4sUAQnecBfxu5-1" target="_blank" id="sino_w2_tab4tofigma-2">瀏覽完整設計稿</a></div>
             </div>
 
         </div>
