--- a/sino_works_3.html
+++ b/sino_works_3.html
@@ -94,7 +94,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">前言</div>
                         <div class="pup_text large_text">
-                            使團隊開發、維護和交接時有所依據，<span class="emphasize_text">保持視覺稿與前端切版的一致性</span>，依操作邏輯規格化文字、顏色和介面元件，從而有效進行工作任務。
+                            使團隊開發、維護和交接時有所依據，<span class="emphasize_text">保持設計稿與前端切版的一致性</span>，依操作邏輯規格化文字、顏色和介面元件，從而有效進行工作任務。
                         </div>
                         <div class="pup_normal_text">
                             <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1556-1126&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn" id="sino_w3_tab1tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整文件內容</a>
@@ -104,7 +104,7 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">功能機制(部分)</div>
-                        <div class="pup_normal_text">以線框稿的功能機制為基礎，於視覺稿補充操作細節。</div>
+                        <div class="pup_normal_text">以線框稿的功能機制為基礎，於設計稿補充操作細節。</div>
                         <div class="pup_normal_text">以Index首頁示意(桌機版)。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
@@ -176,7 +176,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">圖層命名規則(部分)</div>
                         <div class="pup_normal_text">自定義規則，可對應網頁樣式名稱(class)。</div>
-                        <div class="pup_normal_text">作為視覺稿對應前端工程師切版的溝通基礎。</div>
+                        <div class="pup_normal_text">作為設計稿對應前端工程師切版的溝通基礎。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
                                 <div class="pup_content_pic_item_content">
@@ -334,7 +334,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">圖層命名規則</div>
                         <div class="pup_normal_text">以內容和版面層級，搭配功能導向、圖形樣貌、原生元件名稱...等進行關聯命名。</div>
-                        <div class="pup_normal_text"><span class="emphasize_text">命名具有規則和識別性，以層級概念貼合網頁的巢狀模式</span>，使視覺稿與前端切版貼合，進而提高開發效率。</div>
+                        <div class="pup_normal_text"><span class="emphasize_text">命名具有規則和識別性，以層級概念貼合網頁的巢狀模式</span>，使設計稿與前端切版貼合，進而提高開發效率。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
                                 <div class="pup_content_pic_item_content" style="margin-top:25px;">
@@ -422,8 +422,8 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">RWD樣式</div>
-                        <div class="pup_normal_text emphasize_text">視覺稿以figma的autolayout、dev&nbsp;mode，配合圖層巢狀編排和命名規則。</div>
-                        <div class="pup_normal_text">以此基礎使RWD版面能標註說明，使前端切版有依所據與視覺稿保持一致。</div>
+                        <div class="pup_normal_text emphasize_text">設計稿以figma的autolayout、dev&nbsp;mode，配合圖層巢狀編排和命名規則。</div>
+                        <div class="pup_normal_text">以此基礎使RWD版面能標註說明，使前端切版有依所據與設計稿保持一致。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
                                 <div class="pup_content_pic_item_content" style="margin-top:25px;">
