--- a/sino_works_5.html
+++ b/sino_works_5.html
@@ -111,7 +111,7 @@
                                         <div class="text_item">
                                             <ul class="text_item_list" style="list-style:decimal">
                                                 <li>依figma設計規範中圖層名稱，同步Html標籤class樣式名稱。</li>
-                                                <li>使用figma&nbsp;autolayout排版，使視覺稿圖層與Html巢狀寫法一致。</li>
+                                                <li>使用figma&nbsp;autolayout排版，使設計稿圖層與Html巢狀寫法一致。</li>
                                             </ul>
                                             <div class="pup_normal_text_small" style="margin-top:20px;margin-bottom:5px;">
                                                 以頁面頂部條為例
@@ -123,7 +123,7 @@
                                                 </picture>
                                             </div>
                                             <div class="pup_normal_text" style="margin-top:30px;">
-                                                如此，視覺稿和前端切版能相互貼合，<span class="emphasize_text">設計師和前端工程師有好的溝通基礎</span>，在開發工作上能緊密銜接。
+                                                如此，設計稿和前端切版能相互貼合，<span class="emphasize_text">設計師和前端工程師有好的溝通基礎</span>，在開發工作上能緊密銜接。
                                             </div>
                                         </div>
                                     </div>
@@ -138,7 +138,7 @@
                                         <div class="text_item">
                                             <div class="text_item_title h6 emphasize_text">巢狀特性</div>
                                             <div class="pup_normal_text">
-                                                利用SCSS巢狀寫法，使視覺稿圖層、Html、SCSS能同步巢狀形式，使開發、維運工作增加執行效率。
+                                                利用SCSS巢狀寫法，使設計稿圖層、Html、SCSS能同步巢狀形式，使開發、維運工作增加執行效率。
                                             </div>
                                             <div class="pup_normal_text_small" style="margin-top:20px;margin-bottom:5px;">
                                                 以頁面頂部條SCSS為例
@@ -190,7 +190,7 @@
                                                 </picture>
                                             </div>
                                             <div class="pup_normal_text" style="margin-top:30px;">
-                                                如此，<span class="emphasize_text">視覺稿和前端切版能保持一致</span>，使設計師視覺能力能同步表現於網頁前端。
+                                                如此，<span class="emphasize_text">設計稿和前端切版能保持一致</span>，使設計師視覺能力能同步表現於網頁前端。
                                             </div>
                                         </div>
 
