--- a/yuanta_works_3.html
+++ b/yuanta_works_3.html
@@ -74,7 +74,7 @@
 <body class="body_page yuanta_works_3_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">元大期貨槓桿官網&nbsp;視覺稿</div>
+            <div class="h4 font_bold">元大期貨槓桿官網&nbsp;設計稿</div>
             <a href="uiux_index.html#p8-2_title">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
@@ -92,7 +92,7 @@
             <div id="yuanta_tab_1" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">桌機視覺稿</div>
+                        <div class="part_title h5 font_bold emphasize_text">桌機設計稿</div>
                         <div class="pup_text large_text" style="font-size:16px;">以螢幕解析度寬1920px為例。</div>
 
                         <div class="pup_content_pic_container">
@@ -184,13 +184,13 @@
                     </div>
                 </div>
                 <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">桌機視覺稿</span></span>
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">桌機設計稿</span></span>
                 </div>
             </div>
             <div id="yuanta_tab_2" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">筆電視覺稿</div>
+                        <div class="part_title h5 font_bold emphasize_text">筆電設計稿</div>
                         <div class="pup_text large_text" style="font-size:16px;">以螢幕解析度寬1280px為例。</div>
 
                         <div class="pup_content_pic_container">
@@ -282,13 +282,13 @@
                     </div>
                 </div>
                 <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">筆電視覺稿</span></span>
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">筆電設計稿</span></span>
                 </div>
             </div>
             <div id="yuanta_tab_3" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">手機視覺稿</div>
+                        <div class="part_title h5 font_bold emphasize_text">手機設計稿</div>
                         <div class="pup_text large_text" style="font-size:16px;">以螢幕解析度寬375px為例。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
@@ -359,7 +359,7 @@
                     </div>
                 </div>
                 <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">手機視覺稿</span></span>
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">手機設計稿</span></span>
                 </div>
             </div>
         </div>
