--- a/yulon_works_4.html
+++ b/yulon_works_4.html
@@ -74,7 +74,7 @@
 <body class="body_page">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">員工APP&nbsp;後台視覺稿</div>
+            <div class="h4 font_bold">員工APP&nbsp;後台設計稿</div>
             <a href="uiux_index.html#p9_title">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
@@ -89,7 +89,7 @@
                     <div class="pup_text large_text font_bold emphasize_text" style="margin:20px 0px 0px 0px;">
                         前導-頁面架構
                     </div>
-                    <div class="pup_normal_text_small">視覺稿展示內容，為亮色區塊之頁面</div>
+                    <div class="pup_normal_text_small">設計稿展示內容，為亮色區塊之頁面</div>
                     <div class="pup_content_pic_item" style="margin-bottom:30px;">
                         <div class="pup_content_pic_item_content yuanta_pic_1" style="margin-top:15px;">
                             <img src="images/yulon_pic_9-0.png" style="max-width:100%;">
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="pup_window_content_end_tip_container">
-                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">裕隆員工資訊APP&nbsp;管理後台視覺稿</span></span>
+                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">裕隆員工資訊APP&nbsp;管理後台設計稿</span></span>
             </div>
         </div>
 
