--- a/yulon_works_3.html
+++ b/yulon_works_3.html
@@ -74,7 +74,7 @@
 <body class="body_page yulon_works_3_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">員工資訊APP&nbsp;視覺稿</div>
+            <div class="h4 font_bold">員工資訊APP&nbsp;設計稿</div>
             <a href="uiux_index.html#p9_title">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
@@ -92,12 +92,12 @@
             <div id="yulon_tab_6" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">APP前台視覺稿</div>
+                        <div class="part_title h5 font_bold emphasize_text">APP前台設計稿</div>
                         <div class="pup_text large_text" style="font-size:16px;">以ios螢幕解析度寬375px為例</div>
                         <div class="pup_text large_text font_bold emphasize_text" style="margin:20px 0px 0px 0px;">
                             前導-頁面架構
                         </div>
-                        <div class="pup_normal_text_small">視覺稿展示內容，為亮色區塊之頁面</div>
+                        <div class="pup_normal_text_small">設計稿展示內容，為亮色區塊之頁面</div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1" style="margin-top:15px;">
                                 <img src="images/yulon_pic_6-0.png" style="max-width:100%;">
@@ -135,7 +135,7 @@
                             </div>
                         </div>
 
-                        <div class="slidedown_btn_7 slide_btn" style="text-align:center;">展開「R1註冊」流程頁面-視覺稿</div>
+                        <div class="slidedown_btn_7 slide_btn" style="text-align:center;">展開「R1註冊」流程頁面-設計稿</div>
                         <div class="slide_content_7" style="display:none;">
                             <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
                                 R1註冊_啟用帳號
@@ -227,7 +227,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slideup_btn_7 slide_btn" style="text-align:center;display:none;">收起「R1註冊」流程頁面-視覺稿</div>
+                        <div class="slideup_btn_7 slide_btn" style="text-align:center;display:none;">收起「R1註冊」流程頁面-設計稿</div>
                         <script>
                             $(document).ready(function() {
                                 $(".slidedown_btn_7").click(function() {
@@ -243,7 +243,7 @@
                             });
 
                         </script>
-                        <div class="slidedown_btn_8 slide_btn" style="text-align:center;">展開「P1設置新密碼」(忘記密碼)流程頁面-視覺稿</div>
+                        <div class="slidedown_btn_8 slide_btn" style="text-align:center;">展開「P1設置新密碼」(忘記密碼)流程頁面-設計稿</div>
                         <div class="slide_content_8" style="display:none;">
                             <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
                                 P1設置新密碼_提供帳號
@@ -321,7 +321,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slideup_btn_8 slide_btn" style="text-align:center;display:none;">收起「P1設置新密碼」流程頁面-視覺稿</div>
+                        <div class="slideup_btn_8 slide_btn" style="text-align:center;display:none;">收起「P1設置新密碼」流程頁面-設計稿</div>
                         <script>
                             $(document).ready(function() {
                                 $(".slidedown_btn_8").click(function() {
@@ -501,7 +501,7 @@
                         </div>
 
                         <div class="pup_window_content_end_tip_container">
-                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">內容(一)視覺稿</span></span>
+                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">內容(一)設計稿</span></span>
                         </div>
                     </div>
                 </div>
@@ -510,12 +510,12 @@
             <div id="yulon_tab_7" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">APP前台視覺稿</div>
+                        <div class="part_title h5 font_bold emphasize_text">APP前台設計稿</div>
                         <div class="pup_text large_text" style="font-size:16px;">以ios螢幕解析度寬375px為例</div>
                         <div class="pup_text large_text font_bold emphasize_text" style="margin:20px 0px 0px 0px;">
                             前導-頁面架構
                         </div>
-                        <div class="pup_normal_text_small">視覺稿展示內容，為亮色區塊之頁面</div>
+                        <div class="pup_normal_text_small">設計稿展示內容，為亮色區塊之頁面</div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1" style="margin-top:15px;">
                                 <img src="images/yulon_pic_7-0.png" style="max-width:100%;">
@@ -808,7 +808,7 @@
                             </div>
                         </div>
                         <div class="pup_window_content_end_tip_container">
-                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">內容(二)視覺稿</span></span>
+                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">內容(二)設計稿</span></span>
                         </div>
                     </div>
                 </div>
@@ -817,7 +817,7 @@
             <div id="yulon_tab_8" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">視覺稿樣式庫</div>
+                        <div class="part_title h5 font_bold emphasize_text">設計稿樣式庫</div>
                         <div class="pup_text large_text" style="font-size:16px;">以ios為例</div>
 
                         <div class="pup_window_content_part project_content_part" style="margin-top:30px;">
@@ -989,7 +989,7 @@
                         </div>
 
                         <div class="pup_window_content_end_tip_container">
-                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">視覺稿樣式庫</span></span>
+                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">設計稿樣式庫</span></span>
                         </div>
                     </div>
                 </div>
