--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -85,8 +85,8 @@
         <div class="pup_window_content_scroll">
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
-                    <div class="part_title h5 font_bold emphasize_text">一、定義目標客群</div>
-                    <div class="pup_normal_text">從業務單位獲取資訊，統整目標客群特性。</div>
+                    <div class="part_title h5 font_bold emphasize_text">一、定義網站主要使用者類型</div>
+                    <div class="pup_normal_text">從業務單位獲取資訊，統整使用者特性。</div>
                     <div class="pup_content_text">
                         <div class="text_row">
                             <div class="text_item">
@@ -99,11 +99,13 @@
                             </div>
                         </div>
                     </div>
+                    <div class="pup_normal_text" style="margin-top:5px;">以兩個方向<span class="emphasize_text">「產品適配性」、「獲利來源」</span>定義，後續作為<span class="emphasize_text">「行銷推廣、使用者訪談、網站內容制定」</span>之依據。</div>
+                    <div class="pup_normal_text_small"  style="margin-top:10px;">※若有明確的「營運目標」則將以此來定義使用者類型。</div>
                 </div>
             </div>
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
-                    <div class="part_title h5 font_bold emphasize_text">二、分析服務取向和客戶屬性</div>
+                    <div class="part_title h5 font_bold emphasize_text">二、分析服務取向和使用者屬性</div>
                     <div class="pup_normal_text">以保險為主題。</div>
                     <div class="pup_content_pic_container" style="margin-top:20px;">
                         <div class="pup_content_pic_item">
@@ -122,7 +124,7 @@
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">三、統整精煉產品面向</div>
-                    <div class="pup_normal_text">統整服務取向、客戶屬性，明確產品設計方向，如：網站視覺風格、文案用詞語氣、頁面主題制定...等。</div>
+                    <div class="pup_normal_text">統整服務取向、使用者屬性，<span class="emphasize_text">明確產品設計方向，如：網站視覺風格、文案用詞語氣、頁面主題制定</span>...等。</div>
                     <div class="pup_content_pic_container">
                         <div class="pup_content_pic_item">
                             <div class="pup_content_pic_item" style="text-align:left;">
