--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -137,6 +137,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="pup_normal_text_small"  style="margin-top:50px;">※後續仍能以「質化研究，如：使用者訪談的人物誌光譜」「客服部門的CRM資料」「營運目標」來修正調整產品面向。</div>
                 </div>
             </div>
 
