--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -74,7 +74,7 @@
 <body class="body_page">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">網路投保網站&nbsp;分析內容</div>
+            <div class="h4 font_bold">網路投保網站&nbsp;UX分析</div>
             <a href="uiux_index.html#p7_title">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
@@ -142,7 +142,7 @@
             </div>
 
             <div class="pup_window_content_end_tip_container">
-                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">投資交易APP&nbsp;分析內容</span></span>
+                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">網路投保網站&nbsp;UX分析</span></span>
             </div>
         </div>
 
