--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1063,11 +1063,14 @@
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>易用性測試<span></span>
                             </div>
                             <div class="work_info_subtext">
-                                與前端工程師合作完成<span class="sino_works_6_btn pup_info_link">實行性原型</span>，依目標客群條件招募受訪者，根據模擬情境取得使用反饋。
+                                與前端工程師合作完成<span class="sino_works_6_btn pup_info_link">實行性原型</span>，依目標使用者特性招募受訪者，根據模擬情境取得使用反饋並給予行動建議和開發順序。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
                                 <span><a href="sino_works_6.html">測試內容</a></span>
+                            </div>
+                            <div class="work_info_note appear-animation" data-appear-animation="fadeInUp" style="font-size:16px;color:#232323;margin-top:10px;">
+                                <div><span>*</span><a href="sino_works_7.html">運用AI工具</a>作為行動建議，解決受訪者痛點。</div>
                             </div>
                         </div>
                     </div>
