--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pup_normal_text" style="margin-top:5px;">以兩個方向<span class="emphasize_text">「產品適配性」、「獲利來源」</span>定義，後續作為<span class="emphasize_text">「行銷推廣、使用者訪談、網站內容制定」</span>之依據。</div>
+                    <div class="pup_normal_text" style="margin-top:5px;">以兩個方向<span class="emphasize_text">「產品適配性」、「獲利來源」</span>定義，後續作為<span class="emphasize_text">「行銷推廣、招募受訪者、網站內容制定」</span>之依據。</div>
                     <div class="pup_normal_text_small"  style="margin-top:10px;">※若有明確的「營運目標」則將以此來定義使用者類型。</div>
                 </div>
             </div>
