--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1054,7 +1054,10 @@
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a href="sino_works_5.html">實行性原型-切版說明</a></span>
+                                    <span><a href="sino_works_5.html">前端切版說明</a></span>
+                                </div>
+                                <div class="work_info_note appear-animation" data-appear-animation="fadeInUp" style="font-size:16px;color:#232323;">
+                                    <div><span>*</span>設計稿與前端切版配合的實際應用。</div>
                                 </div>
                             </div>
                         </div>
@@ -1069,8 +1072,8 @@
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
                                 <span><a href="sino_works_6.html">測試內容</a></span>
                             </div>
-                            <div class="work_info_note appear-animation" data-appear-animation="fadeInUp" style="font-size:16px;color:#232323;margin-top:10px;">
-                                <div><span>*</span><a href="sino_works_7.html">運用AI工具</a>作為行動建議，解決受訪者痛點。</div>
+                            <div class="work_info_note appear-animation" data-appear-animation="fadeInUp" style="font-size:16px;color:#232323;margin-top:5px;">
+                                <div><a href="sino_works_7.html"><span>*</span>運用AI工具</a>作為行動建議，解決受訪者痛點。</div>
                             </div>
                         </div>
                     </div>
