--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -254,31 +254,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="pup_window_content_part project_content_part">
-                    <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">二、提升資訊傳遞效率</div>
-                        <div class="pup_normal_text">例：以圖示輔助文字描述。</div>
-                        <div class="pup_content_pic_container" style="margin-top:20px;">
-                            <div class="pup_content_pic_item" style="text-align:left;">
-                                <div class="pup_normal_text"><span class="emphasize_text">1.主題+符合的插圖。</span></div>
-                                <div class="pup_normal_text_small">如：保費試算依插圖，意識當前試算險種。</div>
-                                <div class="pup_normal_text" style="margin-top:20px;"><span class="emphasize_text">2.功能+對應的圖示。</span></div>
-                                <div class="pup_normal_text_small">如：險種頁籤依圖示，判斷對應險種。</div>
-                                <div class="pup_content_pic_item_content">
-                                    <picture>
-                                        <source media="(max-width:540px)" srcset="images/sino_pic_13-8-540.png" />
-                                        <source media="(max-width:960px)" srcset="images/sino_pic_13-8-768.png" />
-                                        <img src="images/sino_pic_13-8.png" class="sino_pic_11">
-                                    </picture>
-                                    <div class="pup_normal_text emphasize_text">減少閱讀文字時間和負擔。</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">三、提升版面閱讀性</div>
+                        <div class="part_title h5 font_bold emphasize_text">二、提升版面閱讀性</div>
                         <div class="pup_normal_text">根據資訊內容，優化排版並模組化。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
@@ -290,6 +268,7 @@
                                         <img src="images/sino_pic_13-9-1.png" class="sino_pic_11">
                                     </picture>
                                 </div>
+                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;">視覺動線過長且零碎跳躍</div>
                                 <div class="pup_content_pic_item_content" style="margin-top:5px;margin-bottom:5px;">
                                     <picture>
                                         <source media="(max-width:768px)" srcset="images/sino_pic_13-9-2.png" />
@@ -303,6 +282,7 @@
                                         <img src="images/sino_pic_13-9-3.png" class="sino_pic_11">
                                     </picture>
                                 </div>
+                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;">縮短視覺動線有效率閱讀內容。</div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:768px)" srcset="images/sino_pic_13-9-4.png" />
@@ -356,6 +336,29 @@
                         </div>
                     </div>
                 </div>
+                <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
+                    <div class="pup_content">
+                        <div class="part_title h5 font_bold emphasize_text">三、提升資訊傳遞效率</div>
+                        <div class="pup_normal_text">例：以圖示輔助文字描述。</div>
+                        <div class="pup_content_pic_container" style="margin-top:20px;">
+                            <div class="pup_content_pic_item" style="text-align:left;">
+                                <div class="pup_normal_text"><span class="emphasize_text">1.主題+符合的插圖。</span></div>
+                                <div class="pup_normal_text_small">如：保費試算依插圖，意識當前試算險種。</div>
+                                <div class="pup_normal_text" style="margin-top:20px;"><span class="emphasize_text">2.功能+對應的圖示。</span></div>
+                                <div class="pup_normal_text_small">如：險種頁籤依圖示，判斷對應險種。</div>
+                                <div class="pup_content_pic_item_content">
+                                    <picture>
+                                        <source media="(max-width:540px)" srcset="images/sino_pic_13-8-540.png" />
+                                        <source media="(max-width:960px)" srcset="images/sino_pic_13-8-768.png" />
+                                        <img src="images/sino_pic_13-8.png" class="sino_pic_11">
+                                    </picture>
+                                    <div class="pup_normal_text emphasize_text">減少閱讀文字時間和負擔。</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">四、深度提升易讀性</div>
