--- a/oloo_works_4.html
+++ b/oloo_works_4.html
@@ -85,7 +85,7 @@
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_1"><a href="#oloo_tab_1" class="set_middle"><span>資料統整</span></a></div>
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_2"><a href="#oloo_tab_2" class="set_middle"><span>研究論述</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_3"><a href="#oloo_tab_3" class="set_middle"><span>其他</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_3"><a href="#oloo_tab_3" class="set_middle"><span>發想思維</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
             <div id="oloo_tab_1" class="pup_window_tab_content">
