--- a/gapp_works_1.html
+++ b/gapp_works_1.html
@@ -119,8 +119,8 @@
                                     <div class="text_item" style="margin-top:10px;">
                                         <div class="text_item_title h6">分析方向</div>
                                         <ul class="text_item_list" style="list-style:disc;padding-left:25px;margin-top:5px;">
-                                            <li>加速旅程迴圈，以提升目標達成率。</li>
-                                            <li>定義關鍵步驟點，以強化使用體驗。</li>
+                                            <li>加速旅程迴圈，以<span class="emphasize_text">提升營收達成率</span>。</li>
+                                            <li><span class="emphasize_text">定義關鍵步驟</span>，以強化使用體驗。</li>
                                         </ul>
                                     </div>
                                     <div class="pup_content_pic">
@@ -158,7 +158,7 @@
                             </div>
                             <div class="pup_window_content_part">
                                 <div class="pup_content">
-                                    <div class="part_title h5 font_bold emphasize_text">四、檢視產品頁面內容</div>
+                                    <div class="part_title h5 font_bold emphasize_text">四、規劃產品頁面內容</div>
                                     <div class="text_item_title h6" style="margin-top:20px;">入口：導覽列<br /><span class="pup_normal_text_small">(ios Tab bars、android Bottom navigation)</span></div>
                                     <div class="pup_content_pic_item" style="text-align:left;margin-top:20px;">
                                         <div>
